Fix duration display on small player
[#183442469]

--- a/src/MediaPlayer/Plyr/sass/components/times.scss
+++ b/src/MediaPlayer/Plyr/sass/components/times.scss
@@ -14,8 +14,16 @@
     content: '\2044';
     margin-right: $plyr-control-spacing;
   }
+}
 
+.plyr__controls__item {
   @media (max-width: ($plyr-bp-md - 1px)) {
-    display: none;
+    &:first-child {
+      margin-right: auto;
+    }
+
+    &.plyr__time {
+      display: none;
+    }
   }
 }
